--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/cypress open"
+    "start": "./node_modules/.bin/cypress open",
+    "test": "./node_modules/.bin/cypress run"
   },
   "repository": {
     "type": "git",
